--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,1 +1,16 @@
-<!-- Напишите решение сюда -->
+<!DOCTYPE html>
+<!-- Главная страница -->
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <title>Задание 1</title>
+    </head>
+    <body>
+        <p>Hello world</p>
+    </body>
+</html>
+
+
+
+
+
