add solution for 02-dz0

--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <!-- Ваше решение -->
+    <head>
+        <link rel="stylesheet" href="styles.css" type="text/css" />
+    </head>
+    <body> 
+        <header class="main-header">
+            <div>Header</div>
+        </header>
+        <nav class="main-nav">
+            <a href="#" target="_blank" class="nav-link">Navigation 1</a>
+            <a href="#" target="_blank" class="nav-link">Navigation 2</a>
+            <a href="#" target="_blank" class="nav-link">Navigation 3</a>
+        </nav>
+        <main class="main-block">
+            <article class="main-article">
+                <div class="article-title">Article 1</div>
+                <ul class="article-list">
+                    <li class="article-text">Оригинальная трилогия</li>
+                    <li class="article-text">Трилогия приквелов</li>
+                    <li class="article-text">Трилогия сиквелов</li>
+                </ul>
+            </article>
+
+            <article class="main-article">
+                <div class="article-title">Article 2</div>
+                <ul class="article-list">
+                    <li class="article-text">Эпизод 4</li>
+                    <li class="article-text">Эпизод 5</li>
+                    <li class="article-text">Эпизод 6</li>
+                </ul>
+            </article>
+        </main>       
+        <footer class="main-footer">
+            <div>Footer</div>
+        </footer>
+    </body>
 </html>
