--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -2,6 +2,7 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="styles.css" type="text/css" />
+        <title>Задание 2</title>
     </head>
     <body> 
         <header class="main-header">
