--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="page">
             <header class="header">
                 <div class="header__content">
-                    <div class="header__menu">
-                        <div class="header__logo"><img href="#" src="./assets/images/logo.png" class="header__logo-img" alt="logo"></div>
+                    <div class="header__logo">
+                        <img href="#" src="./assets/images/logo.png" class="header__logo-img" alt="logo">
                     </div>
-                    <div class="header__title">Reusable component library</div>
+                    <h1 class="header__title">Reusable component library</h1>
                 </div>
             </header>
             <main class="main">
@@ -24,7 +24,7 @@
             </main>
             <footer class="footer">
                 <div class="footer__content">
-                    <div class="footer__title">About</div>
+                    <h2 class="footer__title">About</h2>
                     <div class="footer__description">This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.</div>
                 </div>
             </footer>
