--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!-- Страница с кнопкой -->
 <html lang="ru">
@@ -6,6 +7,12 @@
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
+        <button class="button button_primary">Primary</button>
+        <button class="button button_secondary">Secondary</button>
+        <button class="button button_alternate">Alternate</button>
 
+        <button class="button button_primary" disabled>Primary</button>
+        <button class="button button_secondary" disabled>Secondary</button>
+        <button class="button button_alternate" disabled>Alternate</button>
     </body>
 </html>
