--- a/03-lection1/02-accordion_2/index.html
+++ b/03-lection1/02-accordion_2/index.html
@@ -6,29 +6,31 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details class="accordion__item" open>
-            <summary class="accordion__title">
-                Accordion item 1
-            </summary>
-            <p class="accordion__text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-        </details>
-        <details class="accordion__item">
-            <summary class="accordion__title">
-                Accordion item 2
-            </summary>
-            <p class="accordion__text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-        </details>
-        <details class="accordion__item">
-            <summary class="accordion__title">
-                Accordion item 3
-            </summary>
-            <p class="accordion__text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-        </details>
+        <div class="accordion">
+            <details class="accordion__item" open>
+                <summary class="accordion__title">
+                    Accordion item 1
+                </summary>
+                <p class="accordion__text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </details>
+            <details class="accordion__item">
+                <summary class="accordion__title">
+                    Accordion item 2
+                </summary>
+                <p class="accordion__text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </details>
+            <details class="accordion__item">
+                <summary class="accordion__title">
+                    Accordion item 3
+                </summary>
+                <p class="accordion__text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </details>
+        </div>
     </body>
 </html>
