--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
     <body>
         <div class="page">
             <header class="header">
-                <div class="header__content">
+                <div class="container">
                     <div class="header__logo">
                         <img href="#" src="./assets/images/logo.png" class="header__logo-img" alt="logo">
                     </div>
                     <h1 class="header__title">Reusable component library</h1>
                 </div>
             </header>
-            <main class="main">
-                <div class="main__content">
+            <main class="preview">
+                <div class="container">
+                    <div class="preview__cards">
+                        <div class="card preview__card"></div>
+                        <div class="card preview__card"></div>
+                        <div class="card preview__card"></div>
+                    </div>
                 </div>
             </main>
             <footer class="footer">
-                <div class="footer__content">
+                <div class="footer__container">
                     <h2 class="footer__title">About</h2>
                     <div class="footer__description">This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.</div>
                 </div>
