add solution skeleton

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -6,6 +6,16 @@
         <link rel="stylesheet" href="./skeleton.css">
     </head>
     <body>
-
+        <div class="skeleton">
+            <div class="skeleton__title">
+                <div class="skeleton__circle "></div>
+                <div class="skeleton__description">
+                    <div class="skeleton__line skeleton_line_min"></div>
+                    <div class="skeleton__line skeleton_line_middle"></div>
+                </div>
+            </div>
+            <div class="skeleton__line skeleton_line_max"></div>
+            <div class="skeleton__line skeleton_line_max"></div>
+        </div>
     </body>
 </html>
