--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -12,21 +12,21 @@
                     <div class="histogram__title">Total orders</div>
                     <div class="histogram__amount">50254</div>
                 </div>
-                <div class="histogram__link">
-                    <a href="#" target="_blank" class="histogram__link-text">View all</a>
+                <div class="histogram__link-wrap">
+                    <a href="#" target="_blank" class="histogram__link">View all</a>
                 </div>
             </div>
             <div class="histogram__body">
-                <div class="histogram__column histogram_max"></div>
-                <div class="histogram__column histogram_middle"></div>
-                <div class="histogram__column histogram_min"></div>
-                <div class="histogram__column histogram_max"></div>
-                <div class="histogram__column histogram_middle"></div>
-                <div class="histogram__column histogram_max"></div>
-                <div class="histogram__column histogram_min"></div>
-                <div class="histogram__column histogram_max"></div>
-                <div class="histogram__column histogram_middle"></div>
-                <div class="histogram__column histogram_min"></div>
+                <div class="histogram__column histogram__column_max"></div>
+                <div class="histogram__column histogram__column_middle"></div>
+                <div class="histogram__column histogram__column_min"></div>
+                <div class="histogram__column histogram__column_max"></div>
+                <div class="histogram__column histogram__column_middle"></div>
+                <div class="histogram__column histogram__column_max"></div>
+                <div class="histogram__column histogram__column_min"></div>
+                <div class="histogram__column histogram__column_max"></div>
+                <div class="histogram__column histogram__column_middle"></div>
+                <div class="histogram__column histogram__column_min"></div>
             </div>
         </div>
     </body>
