--- a/pages/template.html
+++ b/pages/template.html
@@ -9,48 +9,44 @@
         <link rel="stylesheet" href="../assets/css/main.css">
     </head>
     <body>
-        <div class="page">
-            <div class="component">
-                <div class="component__header">
-                    <div class="container">
-                        <div class="header__logo">
-                            <img href="#" src="../assets/images/logo.png" class="header__logo-img" alt="logo">
-                        </div>
+        <div class="page page_component">
+            <div class="component__header">
+                <div class="container">
+                    <div class="header__logo">
+                        <img href="#" src="../assets/images/logo.png" class="header__logo-img" alt="logo">
                     </div>
                 </div>
-                <div class="component__main container"> 
-                    <div class="menu">
-                        <ul class="menu__wrap">
-                            <li class="menu__title">Elements
-                                <ul class="menu__block">
-                                    <li class="menu__subtitle">Avatar</li>
-                                    <li class="menu__subtitle">Custom form elements</li>
-                                    <li class="menu__subtitle">Button</li>
-                                </ul>
-                            </li>
-                            <li class="menu__title">Containers
-                                <ul class="menu__block">
-                                    <li class="menu__subtitle">Avatar</li>
-                                    <li class="menu__subtitle">Custom form elements</li>
-                                    <li class="menu__subtitle">Button</li>
-                                </ul>
-                            </li>
-                            <li class="menu__title">Templates
-                                <ul class="menu__block">
-                                    <li class="menu__subtitle">Avatar</li>
-                                    <li class="menu__subtitle">Custom form elements</li>
-                                    <li class="menu__subtitle">Button</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="content"></div> 
+            </div>
+            <div class="component__main container"> 
+                <div class="menu">
+                    <ul class="menu__wrap">
+                        <li class="menu__title">Elements
+                            <ul class="menu__block">
+                                <li class="menu__subtitle">Avatar</li>
+                                <li class="menu__subtitle">Custom form elements</li>
+                                <li class="menu__subtitle">Button</li>
+                            </ul>
+                        </li>
+                        <li class="menu__title">Containers
+                            <ul class="menu__block">
+                                <li class="menu__subtitle">Avatar</li>
+                                <li class="menu__subtitle">Custom form elements</li>
+                                <li class="menu__subtitle">Button</li>
+                            </ul>
+                        </li>
+                        <li class="menu__title">Templates
+                            <ul class="menu__block">
+                                <li class="menu__subtitle">Avatar</li>
+                                <li class="menu__subtitle">Custom form elements</li>
+                                <li class="menu__subtitle">Button</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-                <div class="component__footer">
-                    <div class="container">
-                        Reusable component library
-                    </div>
-                </div>
+                <div class="content"></div> 
+            </div>
+            <div class="component__footer">
+                Reusable component library
             </div>
         </div>
     </body>
