--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -11,13 +11,13 @@
             <div class="calendar__title">October 2019</div>
             <div class="calendar__wrapper">
                 <div class="calendar__inner">
-                    <div class="calendar__item calendar__item-day">Mon</div>
-                    <div class="calendar__item calendar__item-day">Tue</div>
-                    <div class="calendar__item calendar__item-day">Wed</div>
-                    <div class="calendar__item calendar__item-day">Thu</div>
-                    <div class="calendar__item calendar__item-day">Fri</div>
-                    <div class="calendar__item calendar__item-day">Sat</div>
-                    <div class="calendar__item calendar__item-day">Sun</div>
+                    <div class="calendar__item calendar__item_day">Mon</div>
+                    <div class="calendar__item calendar__item_day">Tue</div>
+                    <div class="calendar__item calendar__item_day">Wed</div>
+                    <div class="calendar__item calendar__item_day">Thu</div>
+                    <div class="calendar__item calendar__item_day">Fri</div>
+                    <div class="calendar__item calendar__item_day">Sat</div>
+                    <div class="calendar__item calendar__item_day">Sun</div>
                     <div class="calendar__item"></div>
                     <div class="calendar__item"></div>
                     <div class="calendar__item"></div>
@@ -35,8 +35,8 @@
                     <div class="calendar__item">11</div>
                     <div class="calendar__item">12</div>
                     <div class="calendar__item calendar__item_active">13</div>
-                    <div class="calendar__item calendar__item_between-active">14</div>
-                    <div class="calendar__item calendar__item_between-active">15</div>
+                    <div class="calendar__item calendar__item_between_active">14</div>
+                    <div class="calendar__item calendar__item_between_active">15</div>
                     <div class="calendar__item calendar__item_active">16</div>
                     <div class="calendar__item">17</div>
                     <div class="calendar__item">18</div>
