--- a/05-lection3/02-modal/index.html
+++ b/05-lection3/02-modal/index.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./modal.css">
+        <link rel="stylesheet" href="../../03-lection1/01-button/button.css">
         <title>Modal</title>
     </head>
     <body>
