--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
             <header class="header">
                 <div class="container">
                     <div class="header__logo">
-                        <img href="#" src="./assets/images/logo.png" class="header__logo-img" alt="logo">
+                        <svg width="110" height="32" viewBox="0 0 110 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_16770_130)">
+                            <rect y="1" width="30" height="30" fill="#212429"/>
+                            <rect x="38" width="32" height="32" rx="16" fill="#212429"/>
+                            <path d="M78 0L110 32H78V0Z" fill="#212429"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_16770_130">
+                            <rect width="110" height="32" fill="white"/>
+                            </clipPath>
+                            </defs>
+                        </svg>
                     </div>
                     <h1 class="header__title">Reusable component library</h1>
                 </div>
