--- a/06-lection4/01-avatar/index.html
+++ b/06-lection4/01-avatar/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="avatar">
-            <img src="./public/avatar-200.jpg" alt="avatar" class="avatar__img">
+            <img src="../../assets/images/avatar-200.jpg" alt="avatar" class="avatar__img">
         </div>
     </body>
 </html>
