--- a/06-lection4/02-background-image/index.html
+++ b/06-lection4/02-background-image/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./background-image.css">
     </head>
     <body>
-
+        <div class="background"></div>
     </body>
 </html>
