add solution srcset

--- a/06-lection4/03-srcset/index.html
+++ b/06-lection4/03-srcset/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./srcset.css">
     </head>
     <body>
-
+        <div class="srcset">
+            <img src="./public/forest_400.jpg" alt="image" srcset="./public/forest_400.jpg 1x, ./public/forest_768.jpg 2x" class="srcset__img">
+        </div>
     </body>
 </html>
