--- a/pages/template.html
+++ b/pages/template.html
@@ -58,8 +58,8 @@
                     <div class="content__title">Custom form elements</div>
                 </div> 
             </div>
-            <div class="footer__text">
-                Reusable component library
+            <div class="page__footer">
+                <div class="footer__text">Reusable component library</div>
             </div>
         </div>
     </body>
