--- a/07-lection5/02-radio/index.html
+++ b/07-lection5/02-radio/index.html
@@ -6,6 +6,16 @@
         <link rel="stylesheet" href="./radio.css">
     </head>
     <body>
-
+        <label class="radio">
+            <input type="radio" class="radio__input" name="radio_block">
+            <div class="radio__state">
+                <div class="radio__control">
+                   <svg class="radio__icon" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="18" height="18" rx="9" fill="#4263EB"/>
+                    </svg>                        
+                </div>
+                <div class="radio__title">Default</div>
+            </div>
+        </label> 
     </body>
 </html>
