--- a/07-lection5/03-toggler/index.html
+++ b/07-lection5/03-toggler/index.html
@@ -6,6 +6,14 @@
         <link rel="stylesheet" href="./toggler.css">
     </head>
     <body>
-
+        <label class="toggler">
+            <input type="checkbox" class="toggler__input">
+            <div class="toggler__state">
+                <div class="toggler__control">
+                    <div class="toggler__icon"></div>
+                </div>
+                <div class="toggler__title">Default</div>
+            </div>
+        </label> 
     </body>
 </html>
