--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
                         <img href="#" src="./assets/images/logo.png" class="header__logo-img" alt="logo">
                     </div>
                     <h1 class="header__title">Reusable component library</h1>
+                    <div class="tabs">
+                        <input type="radio" id="all-tab" name="radio_block" class="radio__tabs" checked>
+                        <input type="radio" id="elements-tab" name="radio_block" class="radio__tabs">
+                        <input type="radio" id="containers-tab" name="radio_block" class="radio__tabs">
+                        <input type="radio" id="templates-tab" name="radio_block" class="radio__tabs">
+                    
+                        <div class="tabs__scroller">
+                            <label for="all-tab" id="title_all" class="tabs__title">All components</label>
+                            <label for="elements-tab" id="title_elements" class="tabs__title">Elements</label>
+                            <label for="containers-tab" id="title_containers" class="tabs__title">Containers</label>
+                            <label for="templates-tab" id="title_templates" class="tabs__title">Templates</label>
+                        </div>
+                    </div>
                 </div>
             </header>
             <main class="preview">
